caffeine_lang/test/caffeine_lang/corpus/frontend/parser/errors/refinement_missing_x.caffeine
Blueprints
  "test" success_rate(x):
    Requiring { env: String { | x in { "a" } } }
    signals { value: "x" }
